# quangphu1912.github.io

./: .gitignore  404.md  CLAUDE.md  Gemfile  README.md  _config.yml  about.md  case-studies.md  index.md  portfolio.md  privacy.md  projects.md  pyproject.toml
.agent/workflows/: opsx-apply.md  opsx-new.md
.claude/: settings.local.json
.github/workflows/: jekyll.yml
.opencode/command/: opsx-workflow.md
_data/: skills.yml  testimonials.yml
_includes/: analytics.html  attribution.html  footer.html  header.html  hero-home.html  hero-telemetry.html  icon-external.html  image-hero.html  image-project-card.html  mermaid.html  profile-avatar.html  project-card.html  project-list.html  project-meta.html  scroll-cue.html  social-url.html  testimonial-card.html
_layouts/: case-study.html  default.html  notebook.html  page.html  portfolio-item.html  project.html
_portfolio/: _template.md  aws-ml-pipeline.md  churn-prediction.md  sentiment-analysis.md
_projects/: aws-pipeline.md  churn-prediction.md  sentiment-analysis.md
_site/: feed.xml  robots.txt  sitemap.xml
assets/css/: main.css
assets/images/: README.md
assets/js/: count-up.js  hero-telemetry.js  nav.js  page-progress.js  reveal.js  transition-direction.js
case-studies/: _template.md  aws-ml-pipeline.md  churn-prediction.md  sentiment-analysis.md
docs/: 20260212_automation_python_workflow_git_branches.md  20260212_jekyll_site_local_test_guide.md
images/: image_optimizer.py  unsplash_api.py  unsplash_automation.py
openspec/: config.yaml
scripts/images/: image_optimizer.py  metadata.py  (+1 more)
(+77 files in other folders)
