[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Phu Le",email = "quangphu1912@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "Pillow>=10.0.0"
]

package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
